--- a/src/SettingsUIView.xib
+++ b/src/SettingsUIView.xib
@@ -84,7 +84,6 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<bool key="IBUIOn">YES</bool>
 						<object class="NSColor" key="IBUIOnTintColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwLjIgMC40AA</bytes>
@@ -154,6 +153,7 @@
 						<string key="NSFrame">{{133, 434}, {94, 27}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
